Security: Remove sensitive config, add example config and security docs
- Add .gitignore to exclude config.php and sensitive files
- Create config.example.php with placeholder values
- Remove config.php from git tracking
- Add SECURITY.md with setup instructions
- Prepare for safe GitHub publication

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,29 @@
 # Configuration files with sensitive data
-config/database.php
-config/settings.php
-.env
+config.php
 
-# Database files
-*.db
-*.sqlite
-*.sqlite3
+# Environment files
+.env
+.env.local
+
+# Database backups
+*.sql
+*.dump
 
 # Log files
-logs/
 *.log
 
 # Temporary files
-tmp/
-temp/
-
-# Upload directories
-uploads/
-files/
+*.tmp
+*.temp
 
 # IDE files
 .vscode/
 .idea/
-*.swp
-*.swo
 
 # OS files
 .DS_Store
 Thumbs.db
 
-# Backup files
-*.bak
-*.backup
+# Upload directories
+uploads/
+backups/
