Complete customer portal with credential management system
- Built MVC portal structure with proper routing
- Added customer portal with company branding integration
- Implemented device credential management for customer-technician communication
- Added show/hide password functionality for security
- Created credential CRUD operations (add/delete)
- Fixed portal routing through main app controller
- Cleaned up duplicate credentials with latest-per-type queries
- Added proper form validation and error handling
- Integrated with existing ticket system and messaging
- Full-width responsive layout optimization

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,9 @@
 RewriteEngine On
+
+# Skip portal directory entirely
+RewriteRule ^portal/ - [L]
+
+# Main app routing
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_URI} !^/SupporTracker/portal
 RewriteRule ^(.*)$ app.php [QSA,L]
