Fix 404 error for password-toggle.js
- Removed external script reference from layout
- Updated .htaccess to exclude static files and includes directory
- Password toggle functionality still works via embedded JavaScript

--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,12 @@ RewriteEngine On
 # Skip portal directory entirely
 RewriteRule ^portal/ - [L]
 
+# Skip includes directory
+RewriteRule ^includes/ - [L]
+
+# Skip static files
+RewriteRule \.(js|css|png|jpg|jpeg|gif|ico|svg)$ - [L]
+
 # Main app routing
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
